// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  color: #000A28;
  background-color: #ffffff;
  font-family: inherit;
  font-size: 16px;
  line-height: initial;
  height: 48px;
  padding-left: 20px;
  padding-right: 20px;
  border: 1px solid transparent;
  border-color: #C2C4CC;
  border-radius: 4px;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:hover {
  box-shadow: 0px 3px 6px rgba(0,10,40,0.06);
}

.c2:focus {
  outline: none;
  border-color: #1A5AFE;
}

.c2:disabled {
  background-color: #F8F8F9;
  pointer-events: none;
}

.c2::-webkit-input-placeholder {
  color: #777C8C;
}

.c2::-moz-placeholder {
  color: #777C8C;
}

.c2:-ms-input-placeholder {
  color: #777C8C;
}

.c2::placeholder {
  color: #777C8C;
}

.c2[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c2[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c2:invalid {
  border-color: #E58989;
  background: #FCF5F5;
}

.was-validated .c2:invalid:focus {
  border-color: #1A5AFE;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1"
    font-size="small"
    font-weight="label"
  >
    Input label
  </div>
  <input
    class="c2"
    color="text"
    font-family="inherit"
    font-size="default"
    height="48px"
  />
</label>
`;

exports[`Field component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  color: #000A28;
  background-color: #ffffff;
  font-family: inherit;
  font-size: 16px;
  line-height: initial;
  height: 48px;
  padding-left: 20px;
  padding-right: 20px;
  border: 1px solid transparent;
  border-color: #C2C4CC;
  border-radius: 4px;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:hover {
  box-shadow: 0px 3px 6px rgba(0,10,40,0.06);
}

.c2:focus {
  outline: none;
  border-color: #1A5AFE;
}

.c2:disabled {
  background-color: #F8F8F9;
  pointer-events: none;
}

.c2::-webkit-input-placeholder {
  color: #777C8C;
}

.c2::-moz-placeholder {
  color: #777C8C;
}

.c2:-ms-input-placeholder {
  color: #777C8C;
}

.c2::placeholder {
  color: #777C8C;
}

.c2[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c2[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c2:invalid {
  border-color: #E58989;
  background: #FCF5F5;
}

.was-validated .c2:invalid:focus {
  border-color: #1A5AFE;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1"
    font-size="small"
    font-weight="label"
  >
    Themed input label
  </div>
  <input
    class="c2"
    color="text"
    font-family="inherit"
    font-size="default"
    height="48px"
  />
</label>
`;
